objects/Executive_Escalation_Points__c.object
<CustomObject>
    <fields>
        <fullName>Available_Points_100__c</fullName>
        <label>Available Points 100</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Points_10__c</fullName>
        <label>Available Points 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Points_25__c</fullName>
        <label>Available Points 25</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Oversight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oversight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Points_100__c</fullName>
        <label>Total Points 100</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Points_10__c</fullName>
        <label>Total Points 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Points_25__c</fullName>
        <label>Total Points 25</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_Points_100__c</fullName>
        <label>Used Points 100</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_Points_10__c</fullName>
        <label>Used Points 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_Points_25__c</fullName>
        <label>Used Points 25</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Executive_Escalation_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Executive Escalation Points</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Total_Points_10__c</columns>
        <columns>Total_Points_25__c</columns>
        <columns>Total_Points_50__c</columns>
        <columns>Total_Points_100__c</columns>
        <columns>Available_Points_100__c</columns>
        <columns>Available_Points_10__c</columns>
        <columns>Available_Points_25__c</columns>
        <columns>Available_Points_50__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EEP-{0000}</displayFormat>
        <label>Executive Escalation Points Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executive Escalation Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>